# MicrometerDataTypes

./: .gitignore  CMakeLists.txt  README.md
include/: Contour.h  Frame.cpp  Frame.h  IProfileParser.h  Point2d.h  Profile.cpp  Profile.h
lib/: CMakeLists.txt
lib/include/: Contour.h  DataUtility.h  Frame.h  IProfileParser.h  ParserAuto.h  ParserCsv.h  ParserDxf.h  ParserSvg.h  Point2d.h  Polyline.h  Profile.h  ProfileParserCsv.h  Rect.h  RotatedRect.h  SegmentLine.h  StraightLine.h
lib/src/: AdapterDxf.cpp  AdapterDxf.h  Contour.cpp  DataUtility.cpp  Frame.cpp  ParserAuto.cpp  ParserCsv.cpp  ParserDxf.cpp  ParserSvg.cpp  Polyline.cpp  Profile.cpp  ProfileParserCsv.cpp  Rect.cpp  RotatedRect.cpp  StraightLine.cpp  Vector2d.cpp
lib/src/2dnurbs/: basis.h  check.h
lib/src/nurbs2d/: basis.h  curve.h  evaluate.h
samples/: CMakeLists.txt
samples/DxfHatchToCsvProfile/: CMakeLists.txt  main.cpp
src/: Frame.h  IData.h  Polyline.cpp  ProfileParserCsv.cpp  Vector2d.h
tests/: CMakeLists.txt  test.cpp  testParserAuto.cpp  testParserCsv.cpp  testParserDxf.cpp  testParserSvg.cpp
